--- a/composer.json
+++ b/composer.json
@@ -22,19 +22,19 @@
         "cline/morphism": "^1.3.0",
         "cline/ruler": "^3.1.0",
         "cline/variable-keys": "^1.1",
-        "illuminate/auth": "^10.0|^11.0|^12.0",
-        "illuminate/cache": "^10.0|^11.0|^12.0",
-        "illuminate/console": "^10.0|^11.0|^12.0",
-        "illuminate/container": "^10.0|^11.0|^12.0",
-        "illuminate/contracts": "^10.0|^11.0|^12.0",
-        "illuminate/database": "^10.0|^11.0|^12.0",
-        "illuminate/events": "^10.0|^11.0|^12.0",
+        "illuminate/auth": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/cache": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/console": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/container": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/contracts": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/database": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/events": "^10.0 || ^11.0 || ^12.0",
         "spatie/laravel-package-tools": "^1.92.7"
     },
     "require-dev": {
-        "cline/coding-standard": "^1.5.8",
-        "orchestra/testbench": "^8.0|^9.0|^10.0",
-        "symfony/var-dumper": "^6.0|^7.0"
+        "cline/coding-standard": "^1.6.2",
+        "orchestra/testbench": "^8.0 || ^9.0 || ^10.8",
+        "symfony/var-dumper": "^6.0 || ^7.4"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
