--- a/.forgejo/workflows/quality-assurance.yaml
+++ b/.forgejo/workflows/quality-assurance.yaml
@@ -45,7 +45,7 @@ jobs:
         uses: https://github.com/shivammathur/setup-php@v2
         with:
           php-version: '8.5'
-          coverage: ${{ matrix.laravel == '12' && matrix.db == 'sqlite' && matrix.key == 'id' && 'pcov' || 'none' }}
+          coverage: pcov
           tools: composer:v2
           extensions: ${{ matrix.db == 'sqlite' && 'pdo_sqlite' || (matrix.db == 'mysql' && 'pdo_mysql' || 'pdo_pgsql') }}
       - name: Install dependencies
